# vim-pytest

./: .projections.json  README.md  pyproject.toml  pytest.ini
autoload/: pytest.vim
autoload/airline/extensions/: pytest.vim
autoload/neomake/makers/: pytest.vim
autoload/neomake/makers/ft/: python.vim
autoload/neomake/makers/ft/python/: lib.py
autoload/neomake/makers/python/: lib.py
plugin/: pytest.vim
tests/: conftest.py  test_lib.py
tests/xmls/: Makefile  error_color.xml  error_in_color.xml  error_in_nocolor.xml  error_nocolor.xml  error_out_color.xml  error_out_nocolor.xml  fail_in_color.xml  fail_in_nocolor.xml  fail_out_color.xml  fail_out_nocolor.xml  success.xml  syntax_error_color.xml  syntax_error_nocolor.xml  test_error_in.py  test_error_out.py  test_fail_out.py  test_syntax_error.py
